# gpu_blas_performance

./: CMakeLists.txt  README.md  perf_old_rocm.md  performance.cpp  syevd_nvidia_perf_data.txt
cmake/: FindMAGMA.cmake
src/: dgemm.cpp  dsyevd.cpp  gpu.hpp  performance.cpp  sgemm.cpp
